[tool.poetry]
name = "epam-content-discovery-assistant"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aidial-sdk = "^0.21.0"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"
mypy = "^1.10.1"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.26.0"
allure-pytest = "^2.14.2"


[tool.bedrock-ci]
src = [
    "app",
    "tests"
]

[tool.bedrock-ci.black]

[tool.bedrock-ci.pylint]

[tool.bedrock-ci.mypy]

[tool.bedrock-ci.pytest]
configuration-file = "tests/unit_tests.ini"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
